End of Chapter 01. Some CSS was applyed to the pages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<html>
-    <head>
-        <title>Café Starbuzz</title>
-    </head>
-    <body>
-        <h1>Bebidas do Café Starbuzz</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Starbuzz Cafe</title>
+    <link rel="stylesheet" href="style/style.css">
+</head>
+<body>
+        <h1>Starbuzz Cafe</h1>
+        <h2>Bebidas</h2>
 
         <h2>Mistura da Casa, R$ 1,49</h2>
         <p>Uma mistura suave e delicada de cafés do México, Bolívia e Guatemala.</p>
@@ -16,7 +21,6 @@
 
         <h2>Chá Chai</h2>
         <p>Uma bebida condimentada com chá preto, especiarias, leite e mel.</p> 
-    </body>
-    
+</body>
 </html>
 
